--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">สำรวจโรคข้าว</string>
     <string name="filter_Options">Choose a planet</string>
     <string-array name="filterOptions">
         <item>locationname</item>
